# LlmPrompts

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pages.yml  python-tests.yml  tests.yml
cli/: build_site.py
docs/: accelerators.rst  conf.py  connectors.rst  contexts.rst  evaluators.rst  index.rst  modules.rst  pipelines.rst  prompts.rst  roles.rst  schemas.rst  templates.rst  utils.rst
src/llm_prompt_builders/: __init__.py
src/llmprompts/: __init__.py
src/llmprompts/contexts/: __init__.py  lifescience_context.py.py
src/llmprompts/pipelines/: analysis_pipeline.py
src/llmprompts/roles/: __init__.py  healthcare.py  lifescience.py
tests/: test_llmprompts.py  test_public_api.py  test_returns_string.py
tests/accelerators/: test_chain.py
tests/connectors/: test_openai_connector.py
tests/contexts/: test_research.py
tests/evaluators/: test_semantic.py
tests/pipelines/: test_analysis_pipeline.py
tests/prompts/: test_classification.py
tests/schemas/: test_models.py
tests/templates/: test_question_template.py
tests/utils/: test_stitcher.py
wiki/: Home.md
